Harden-System-Security-v1.0.19.0
* The verification results page for the **Microsoft Security Baseline** and **Microsoft 365 Apps Security Baselines** now displays the correct current value when a setting is non-compliant, so you can see exactly why it's non-compliant and which existing value causes the issue.

* The **Protect** page → **Device Usage Intents** section now permits only one intent to be selected at a time, matching the intended usage and removing ambiguity.

* The **Device Usage Intents** preview **ListView** on the Protect page now lets you remove individual security measures from the preview before pressing **Apply**, giving you finer control over what gets applied. Items can be deleted in two ways:
    * Right-click (or Tap + Hold) a row and choose the delete option.
    * Swipe left on touch devices — a smooth animation and deletion motion will remove the item from the ListView.

* On the **Optional Windows Features** page, each feature/capability now shows a per-item progress bar while verifying, removing, or applying, so you can see realtime progress for that specific item. Realtime progress is no longer written to the logs as text, avoiding many unnecessary log entries.

* Also on the **Optional Windows Features** page, the app automatically scrolls the ListView to the currently active item during removal or apply operations, making it easy to track that item's realtime progress without manual scrolling.

* Again on the **Optional Windows Features** page, added a new group to the ListView called "Network Adapters", it groups and displays all currently installed network adapter drivers that come by default with the operating system. This allows you to easily identify and remove unnecessary network adapters that you don't need/use, freeing up disk space and potentially reducing attack surface.

* Expanded the scope of the app during verifications of the security measures applied via Group Policies. Previously, they would only be verified and dete

--- a/Harden System Security/Resources/BitLockerSettings.json
+++ b/Harden System Security/Resources/BitLockerSettings.json
@@ -6,8 +6,8 @@
         "Type": 4,
         "Size": 4,
         "Data": "AQAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": "1",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "FDVEncryptionType-BitLocker",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/bitlocker-csp#fixeddrivesencryptiontype",
@@ -29,8 +29,8 @@
         "Type": 4,
         "Size": 4,
         "Data": "AQAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": "1",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "UseAdvancedStartup-BitLocker",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/bitlocker-csp#systemdrivesrequirestartupauthentication",
@@ -49,7 +49,7 @@
         "Size": 4,
         "Data": "AAAAAA==",
         "RegValue": "0",
-        "Hive": null,
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "EnableBDEWithNoTPM-BitLocker",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/bitlocker-csp#systemdrivesrequirestartupauthentication",
@@ -68,7 +68,7 @@
         "Size": 4,
         "Data": "AAAAAA==",
         "RegValue": "0",
-        "Hive": null,
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "UseTPM-BitLocker",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/bitlocker-csp#systemdrivesrequirestartupauthentication",
@@ -86,8 +86,8 @@
         "Type": 4,
         "Size": 4,
         "Data": "AgAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": "2",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "UseTPMPIN-BitLocker",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/bitlocker-csp#systemdrivesrequirestartupauthentication",
@@ -105,8 +105,8 @@
         "Type": 4,
         "Size": 4,
         "Data": "AgAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": "2",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "UseTPMKey-BitLocker",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/bitlocker-csp#systemdrivesrequirestartupauthentication",
@@ -124,8 +124,8 @@
         "Type": 4,
         "Size": 4,
         "Data": "AgAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": "2",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "UseTPMKeyPIN-BitLocker",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/bitlocker-csp#systemdrivesrequirestartupauthentication",
@@ -143,8 +143,8 @@
         "Type": 4,
         "Size": 4,
         "Data": "AQAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": "1",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "DisallowStandardUserPINReset-BitLocker",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/bitlocker-csp#systemdrivesdisallowstandarduserscanchangepin",
@@ -166,8 +166,8 @@
         "Type": 4,
         "Size": 4,
         "Data": "AQAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": "1",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "UseEnhancedPin-BitLocker",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/bitlocker-csp#systemdrivesenhancedpin",
@@ -185,8 +185,8 @@
         "Type": 4,
         "Size": 4,
         "Data": "CgAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": "10",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "MinimumPIN-BitLocker",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/bitlocker-csp#systemdrivesminimumpinlength",
@@ -208,8 +208,8 @@
         "Type": 4,
         "Size": 4,
         "Data": "AQAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": "1",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "OSEncryptionType-BitLocker",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/bitlocker-csp#systemdrivesencryptiontype",
@@ -229,8 +229,8 @@
         "Type": 4,
         "Size": 4,
         "Data": "AQAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": "1",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "RDVEncryptionType-BitLocker",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/bitlocker-csp#removabledrivesencryptiontype",
@@ -248,8 +248,8 @@
         "Type": 4,
         "Size": 4,
         "Data": "BwAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": "7",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "EncryptionMethodWithXtsOs-BitLocker",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/bitlocker-csp#encryptionmethodbydrivetype",
@@ -269,8 +269,8 @@
         "Type": 4,
         "Size": 4,
         "Data": "BwAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": "7",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "EncryptionMethodWithXtsFdv-BitLocker",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/bitlocker-csp#encryptionmethodbydrivetype",
@@ -290,8 +290,8 @@
         "Type": 4,
         "Size": 4,
         "Data": "BwAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": "7",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "EncryptionMethodWithXtsRdv-BitLocker",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/bitlocker-csp#encryptionmethodbydrivetype",
@@ -311,8 +311,8 @@
         "Type": 1,
         "Size": 14,
         "Data": "PABuAG8AbgBlAD4AAAA=",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": "\u003Cnone\u003E",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "RDVDiscoveryVolumeType-BitLocker",
         "URL": "",
@@ -331,7 +331,7 @@
         "Size": 4,
         "Data": "AAAAAA==",
         "RegValue": "0",
-        "Hive": null,
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "RDVNoBitLockerToGoReader-BitLocker",
         "URL": "",
@@ -350,7 +350,7 @@
         "Size": 4,
         "Data": "AAAAAA==",
         "RegValue": "0",
-        "Hive": null,
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "ACSettingIndex-BitLocker",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-power#allowstandbywhensleepingpluggedin",
@@ -371,7 +371,7 @@
         "Size": 4,
         "Data": "AAAAAA==",
         "RegValue": "0",
-        "Hive": null,
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "DCSettingIndex-BitLocker",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-power#allowstandbystateswhensleepingonbattery",
@@ -391,8 +391,8 @@
         "Type": 4,
         "Size": 4,
         "Data": "AQAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": "1",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "ShowHibernateOption-BitLocker",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-admx-windowsexplorer#showhibernateoption",
@@ -410,8 +410,8 @@
         "Type": 4,
         "Size": 4,
         "Data": "AQAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": "1",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "ACConnectivityInStandby_BitLocker",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-admx-power#acconnectivityinstandby_2",
