--- a/Harden System Security/Resources/MiscellaneousConfigurations.json
+++ b/Harden System Security/Resources/MiscellaneousConfigurations.json
@@ -6,8 +6,8 @@
         "Type": 4,
         "Size": 4,
         "Data": "AQAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": "1",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "ProcessCreationIncludeCmdLine_Enabled-Miscellaneous",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-admx-auditsettings#includecmdline",
@@ -25,8 +25,8 @@
         "Type": 4,
         "Size": 4,
         "Data": "AQAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": "1",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "EnableCbacAndArmor-Miscellaneous",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-kerberos#kerberosclientsupportsclaimscompoundarmor",
@@ -47,8 +47,8 @@
         "Type": 4,
         "Size": 4,
         "Data": "AQAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": "1",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "DisableLocation-Miscellaneous",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-System?WT.mc_id=Portal-fx#allowlocation",
@@ -66,8 +66,8 @@
         "Type": 4,
         "Size": 4,
         "Data": "AQAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": "1",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "DisableLocationScripting-Miscellaneous",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-admx-sensors#disablelocationscripting_2",
@@ -88,8 +88,8 @@
         "Type": 4,
         "Size": 4,
         "Data": "AQAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": "1",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "DisableWindowsLocationProvider-Miscellaneous",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-admx-locationprovideradm#disablewindowslocationprovider_1",
@@ -110,8 +110,8 @@
         "Type": 4,
         "Size": 4,
         "Data": "AQAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": "1",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "EnableSvchostMitigationPolicy-Miscellaneous",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-servicecontrolmanager#svchostprocessmitigation",
@@ -132,8 +132,8 @@
         "Type": 4,
         "Size": 4,
         "Data": "CAAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": "8",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "DriverLoadPolicy-Miscellaneous",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-system#bootstartdriverinitialization",
@@ -155,8 +155,8 @@
         "Type": 4,
         "Size": 4,
         "Data": "AQAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": "1",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "LongPathsEnabled-Miscellaneous",
         "URL": "https://learn.microsoft.com/windows/win32/fileio/maximum-file-path-limitation",
@@ -174,8 +174,8 @@
         "Type": 4,
         "Size": 4,
         "Data": "AQAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": "1",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "WindowsProtectedPrintGroupPolicyState-Miscellaneous",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-printers#configurewindowsprotectedprint",
@@ -194,7 +194,7 @@
         "Size": 4,
         "Data": "AAAAAA==",
         "RegValue": "0",
-        "Hive": null,
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "AllowOnlineTips-Miscellaneous",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-settings#allowonlinetips",
@@ -213,7 +213,7 @@
         "Size": 4,
         "Data": "AAAAAA==",
         "RegValue": "0",
-        "Hive": null,
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "AllowFindMyDevice-Miscellaneous",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-experience#allowfindmydevice",
@@ -232,7 +232,7 @@
         "Size": 4,
         "Data": "AAAAAA==",
         "RegValue": "0",
-        "Hive": null,
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "AllowSpeechModelUpdate-Miscellaneous",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-speech#allowspeechmodelupdate",
@@ -250,8 +250,8 @@
         "Type": 4,
         "Size": 4,
         "Data": "AQAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": "1",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "DisabledByGroupPolicy-Miscellaneous",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-privacy#disableadvertisingid",
@@ -269,8 +269,8 @@
         "Type": 4,
         "Size": 4,
         "Data": "AQAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": "1",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "DisableSoftLanding-Miscellaneous",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-experience#allowwindowstips",
@@ -288,8 +288,8 @@
         "Type": 4,
         "Size": 4,
         "Data": "AQAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": "1",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "DisableCloudOptimizedContent-Miscellaneous",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-experience#disablecloudoptimizedcontent",
@@ -307,8 +307,8 @@
         "Type": 4,
         "Size": 4,
         "Data": "AQAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": "1",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "DoNotShowFeedbackNotifications-Miscellaneous",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-experience#donotshowfeedbacknotifications",
@@ -327,7 +327,7 @@
         "Size": 4,
         "Data": "AAAAAA==",
         "RegValue": "0",
-        "Hive": null,
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "AutoDownloadAndUpdateMapData-Miscellaneous",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-maps#enableofflinemapsautoupdate",
@@ -346,7 +346,7 @@
         "Size": 4,
         "Data": "AAAAAA==",
         "RegValue": "0",
-        "Hive": null,
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "AllowMessageSync-Miscellaneous",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-messaging#allowmessagesync",
@@ -365,7 +365,7 @@
         "Size": 4,
         "Data": "AAAAAA==",
         "RegValue": "0",
-        "Hive": null,
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "EnableFontProviders-Miscellaneous",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-system#allowfontproviders",
@@ -384,7 +384,7 @@
         "Size": 4,
         "Data": "AAAAAA==",
         "RegValue": "0",
-        "Hive": null,
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "EnableCdp-Miscellaneous",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-admx-grouppolicy#enablecdp",
@@ -403,7 +403,7 @@
         "Size": 4,
         "Data": "AAAAAA==",
         "RegValue": "0",
-        "Hive": null,
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "EnableAppUriHandlers-Miscellaneous",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-applicationdefaults#enableappurihandlers",
@@ -422,8 +422,8 @@
         "Type": 4,
         "Size": 4,
         "Data": "AQAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": "1",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "DisableWebSearch-Miscellaneous",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-search#donotusewebresults",
@@ -442,7 +442,7 @@
         "Size": 4,
         "Data": "AAAAAA==",
         "RegValue": "0",
-        "Hive": null,
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "ConnectedSearchUseWeb-Miscellaneous",
         "URL": "https://learn.microsoft.com/windows/privacy/manage-connections-from-windows-operating-system-components-to-microsoft-services#21-cortana-and-search-group-policies",
@@ -585,7 +585,7 @@
         "Size": 4,
         "Data": "AQAAAA==",
         "RegValue": "1",
-        "Hive": null,
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "ForceKeyProtection-Miscellaneous",
         "URL": "",
