--- a/Harden System Security/Resources/WindowsUpdateConfigurations.json
+++ b/Harden System Security/Resources/WindowsUpdateConfigurations.json
@@ -6,8 +6,8 @@
         "Type": 4,
         "Size": 4,
         "Data": "AQAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": "1",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "AllowAutoWindowsUpdateDownloadOverMeteredNetwork-WindowsUpdate",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-update#allowautowindowsupdatedownloadovermeterednetwork",
@@ -25,8 +25,8 @@
         "Type": 4,
         "Size": 4,
         "Data": "AQAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": "1",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "AllowTemporaryEnterpriseFeatureControl-WindowsUpdate",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-update#allowtemporaryenterprisefeaturecontrol",
@@ -48,8 +48,8 @@
         "Type": 4,
         "Size": 4,
         "Data": "AQAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": "1",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "SetComplianceDeadlineForFeatureUpdates-WindowsUpdate",
         "URL": "",
@@ -70,7 +70,7 @@
         "Size": 4,
         "Data": "AAAAAA==",
         "RegValue": "0",
-        "Hive": null,
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "ConfigureDeadlineForFeatureUpdates-WindowsUpdate",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-update#configuredeadlineforfeatureupdates",
@@ -90,8 +90,8 @@
         "Type": 4,
         "Size": 4,
         "Data": "AQAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": "1",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "ConfigureDeadlineGracePeriodForFeatureUpdates-WindowsUpdate",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-update#configuredeadlinegraceperiodforfeatureupdates",
@@ -111,8 +111,8 @@
         "Type": 4,
         "Size": 4,
         "Data": "AQAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": "1",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "ConfigureDeadlineNoAutoRebootForFeatureUpdates-WindowsUpdate",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-update#configuredeadlinenoautorebootforfeatureupdates",
@@ -132,8 +132,8 @@
         "Type": 4,
         "Size": 4,
         "Data": "AQAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": "1",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "SetComplianceDeadlineForQualityUpdates-WindowsUpdate",
         "URL": "",
@@ -154,7 +154,7 @@
         "Size": 4,
         "Data": "AAAAAA==",
         "RegValue": "0",
-        "Hive": null,
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "ConfigureDeadlineForQualityUpdates-WindowsUpdate",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-update#configuredeadlineforqualityupdates",
@@ -174,8 +174,8 @@
         "Type": 4,
         "Size": 4,
         "Data": "AQAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": "1",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "ConfigureDeadlineGracePeriod-WindowsUpdate",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-update#configuredeadlinegraceperiod",
@@ -195,8 +195,8 @@
         "Type": 4,
         "Size": 4,
         "Data": "AQAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": "1",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "ConfigureDeadlineNoAutoRebootForQualityUpdates-WindowsUpdate",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-update#configuredeadlinenoautorebootforqualityupdates",
@@ -217,7 +217,7 @@
         "Size": 4,
         "Data": "AAAAAA==",
         "RegValue": "0",
-        "Hive": null,
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "NoAutoUpdate-WindowsUpdate",
         "URL": "https://learn.microsoft.com/windows/deployment/update/waas-wu-settings#configuring-automatic-updates-by-editing-the-registry",
@@ -237,8 +237,8 @@
         "Type": 4,
         "Size": 4,
         "Data": "BAAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": "4",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "AUOptions-WindowsUpdate",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-update#allowautoupdate",
@@ -258,8 +258,8 @@
         "Type": 4,
         "Size": 4,
         "Data": "AQAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": "1",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "AutomaticMaintenanceEnabled-WindowsUpdate",
         "URL": "",
@@ -278,7 +278,7 @@
         "Size": 4,
         "Data": "AAAAAA==",
         "RegValue": "0",
-        "Hive": null,
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "ScheduledInstallDay-WindowsUpdate",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-update#scheduledinstallday",
@@ -296,8 +296,8 @@
         "Type": 4,
         "Size": 4,
         "Data": "GAAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": "24",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "ScheduledInstallTime-WindowsUpdate",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-update#scheduledinstalltime",
@@ -315,8 +315,8 @@
         "Type": 1,
         "Size": 4,
         "Data": "IAAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": " ",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "RemoveScheduleForWeek-WindowsUpdate",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-update#scheduledinstalleveryweek",
@@ -334,8 +334,8 @@
         "Type": 1,
         "Size": 4,
         "Data": "IAAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": " ",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "RemoveScheduleForWeek-WindowsUpdate",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-update#scheduledinstallfirstweek",
@@ -353,8 +353,8 @@
         "Type": 1,
         "Size": 4,
         "Data": "IAAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": " ",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "RemoveScheduleForWeek-WindowsUpdate",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-update#scheduledinstallsecondweek",
@@ -372,8 +372,8 @@
         "Type": 1,
         "Size": 4,
         "Data": "IAAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": " ",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "RemoveScheduleForWeek-WindowsUpdate",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-update#scheduledinstallthirdweek",
@@ -391,8 +391,8 @@
         "Type": 1,
         "Size": 4,
         "Data": "IAAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": " ",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "RemoveScheduleForWeek-WindowsUpdate",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-update#scheduledinstallfourthweek",
@@ -410,8 +410,8 @@
         "Type": 4,
         "Size": 4,
         "Data": "AQAAAA==",
-        "RegValue": "0",
-        "Hive": null,
+        "RegValue": "1",
+        "Hive": 0,
         "PolicyAction": 0,
         "FriendlyName": "AllowMUUpdateService-WindowsUpdate",
         "URL": "https://learn.microsoft.com/windows/client-management/mdm/policy-csp-Update?WT.mc_id=Portal-fx#allowmuupdateservice",
